--- a/src/main/resources/templates/servicos/servico.html
+++ b/src/main/resources/templates/servicos/servico.html
@@ -69,6 +69,36 @@
 					</tr>
 				</thead  >
 				<tbody>
+				<tr th:each="usuario: ${usuarios}">
+						<td th:text=${usuario.login}></td>
+						<td th:text=${usuario.nome}></td>
+						<td th:text=${usuario.tipoCNH}></td>
+						<td th:text=${usuario.ValidadeCNH}></td>
+						<td th:each="role : ${usuario.roles}">
+							<th:block th:switch="${role.nomeRole}">
+								<span th:case="'ROLE_ADMIN'">Administrador</span>
+								<span th:case="'ROLE_MOTORISTA'">Motorista</span>
+								<span th:case="'ROLE_GERENTE'">Gerente</span>
+							<th:block>
+						</td>
+						<td th:each="role : ${usuario.roles}">
+						<th:block th:switch="${role.nomeRole}">
+							<th:block th:case="'ROLE_ADMIN'">
+								<a th:href="@{/editarAdmin/{idusuario}(idusuario=${usuario.id})}">
+									Editar</a>
+							</th:block>
+							<th:block th:case="'ROLE_MOTORISTA'">
+								<a th:href="@{/editarMotorista/{idusuario}(idusuario=${usuario.id})}">
+									Editar</a>
+							</th:block>
+							<th:block th:case="'ROLE_GERENTE'">
+								<a th:href="@{/editarGerente/{idusuario}(idusuario=${usuario.id})}">
+									Editar</a>
+							</th:block>
+						</td>
+						<td><a th:href="@{/removerusuario/{idusuario}(idusuario=${usuario.id})}">
+								Excluir</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
