--- a/src/main/resources/templates/servicos/servico.html
+++ b/src/main/resources/templates/servicos/servico.html
@@ -21,7 +21,7 @@
 	<!-- Navbar -->
 	<nav>
 		<div class="nav-wrapper">
-			<a href="#" class="brand-logo center">Serviços</a>
+			<a href="/servico" class="brand-logo center">Serviços</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="/dashboard"> Dashboard</a></li>
 				<!-- Menu para os Administradores e Gerentes -->
@@ -57,10 +57,10 @@
 			<table class="striped centered responsive-table container">
 				<thead>
 					<tr>
-						<th>Registro Veículo</th>
 						<th>Motorista</th>
-						<th>Distancia</th>
-						<th>Abastecimento</th>
+						<th>Registro Veículo</th>
+						<th>Distancia (KM)</th>
+						<th>Abastecimento (L)</th>
 						<th>Data Inicial</th>
 						<th>Data Final</th>
 						<th>Consumo (KM/L)</th>
@@ -70,17 +70,17 @@
 				</thead>
 				<tbody>
 				<tr th:each="servico: ${servicos}">
-						<td th:text=${servico.veiculo}></td>
 						<td th:text=${servico.usuario}></td>
+						<td th:text=${servico.veiculo}></td>
 						<td th:text=${servico.distancia}></td>
 						<td th:text=${servico.abastecimento}></td>
 						<td th:text=${servico.dataInicial}></td>
 						<td th:text=${servico.dataFinal}></td>
 						<td th:with="consumo=${servico.distancia / servico.abastecimento}">
   							<span th:text="${consumo}"></span></td>
-						<td><a th:href="@{/editar/{idservico}(idservico=${servico.id})}">
+						<td><a th:href="@{/editarServico/{idservico}(idservico=${servico.id})}">
 							Editar</a></td>
-						<td><a th:href="@{/remover/{idservico}(idservico=${servico.id})}">
+						<td><a th:href="@{/removerServico/{idservico}(idservico=${servico.id})}">
 							Excluir</a></td>
 					</tr>
 				</tbody>
