inclui imagem na tela inicial

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,27 @@
 		</div>
 	</nav>
 	<!-- Fim do Navbar -->
+	
+	<main>
+		<div class="container">
+		<div class="row">
+			<br/>
+		</div>
+		<div class="row">
+      		<div class="col s3 m3">
+	      	</div>
+      		<div class="col s6 m6">
+			<div class="card">
+			<div class="card-image">
+				<img src="img/cars.jpg"
+	     		 alt="varios carros numa imagem em 2D no estilo desenho"
+	     		 >
+	      	</div>
+	      	</div>
+      		</div>
+      	</div>
+      	</div>
+	</main>
 
 </body>
 </html>
