criado a coluna de consumo no banco e implementado nas telas

--- a/src/main/resources/templates/servicos/cadastroServico.html
+++ b/src/main/resources/templates/servicos/cadastroServico.html
@@ -90,6 +90,12 @@
 								<input id="id" type="hidden" readonly="readonly"
 									name="id" th:field="*{id}" />
 						</div>
+						<div class="input-field col s2">
+						<label class="active">Consumo (Km/l):</label>
+							<th:block th:with="consumo=${servico.distancia / servico.abastecimento}"></th:block>
+								<input id="consumo" readonly="readonly"
+									name="${consumo}" th:field="*{consumo}" />
+						</div>
 							<div class="input-field col s12">
 								<button class="btn waves-effect waves-light" type="submit">Salvar</button>
 							</div>
