--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,17 +35,21 @@
 	</nav>
 
 	<main>
-		<div>
+	<div class="container center">
+	<br>
+	<h1 class="header center orange-text"> Seja bem-vindo</h1>
+	<br>
+		<div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 			<form th:action="@{/login}" method="post" class="col s12">
 			<h5 class="indigo-text">Acesso ao Sistema</h5>
 				<div class="row">
-					<div class="input-field col s5">
+					<div class="input-field col s12">
 						<label class="active">Login</label> <input type="text"
 							name="username">
 					</div>
 				</div>
 				<div class="row">
-					<div class="input-field col s5">
+					<div class="input-field col s12">
 						<label class="active">Senha</label> <input type="password"
 							name="password">
 					</div>
@@ -58,6 +62,7 @@
 				</div>
 			</form>
 		</div>
+	</div>
 	</main>
 
 	<script type="text/javascript"
