feito as contagem aparecerem no dashboard

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -110,7 +110,7 @@ h6 {
 					<div class="card blue darken-1 white-text">
 						<div class="card-content valign-wrapper" >
 							<div class="card-text">
-								<h4>10</h4>
+									<h4 th:text="${#lists.size(veiculos)}"> </h4>
 							</div>
 							<div class="card-action">
 								<a class="white-text" href="/veiculos">Veiculos</a>
@@ -125,7 +125,7 @@ h6 {
 					<div class="card blue darken-1 white-text">
 						<div class="card-content valign-wrapper" >
 							<div class="card-text">
-								<h4>10</h4>
+								<h4 th:text="${#lists.size(motoristas)}"> </h4>
 							</div>
 							<div class="card-action">
 								<a class="white-text" href="/motoristas">motoristas</a>
@@ -140,7 +140,7 @@ h6 {
 					<div class="card blue darken-1 white-text">
 						<div class="card-content valign-wrapper" >
 							<div class="card-text">
-								<h4>10</h4>
+								<h4 th:text="${#lists.size(servicos)}"> </h4>
 							</div>
 							<div class="card-action">
 								<a class="white-text" href="/servico">Serviços</a>
