--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -12,58 +12,57 @@
 <!--Import materialize.css-->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-	
-	
+
+
 <style type="text/css">
-	body {
-  background-color: #f6f6f6;
-  font-size: 13px;
-  letter-spacing: 0.02rem;
+body {
+	background-color: #f6f6f6;
+	font-size: 13px;
+	letter-spacing: 0.02rem;
 }
 
 h6 {
-  font-size: 1.5rem;
-  margin-top: 0;
+	font-size: 1.5rem;
+	margin-top: 0;
 }
 
-.card,
-.card-panel {
-  box-shadow: 0 1px 1px 0 rgba(60, 64, 67, 0.08),
-    0 1px 3px 1px rgba(60, 64, 67, 0.16);
+.card, .card-panel {
+	box-shadow: 0 1px 1px 0 rgba(60, 64, 67, 0.08), 0 1px 3px 1px
+		rgba(60, 64, 67, 0.16);
 }
 
 .container-fluid {
-  padding: 1rem 1.5rem;
-  max-width: 1000px;
+	padding: 1rem 1.5rem;
+	max-width: 1000px;
 }
 
 .row {
-  margin: 0 -0.75rem;
+	margin: 0 -0.75rem;
 }
 
 @media only screen and (min-width: 993px) {
-  main {
-    padding-left: 480px;
-  }
+	main {
+		padding-left: 480px;
+	}
 }
 
-  .card-action {
-    border-top: none;
-  }
+.card-action {
+	border-top: none;
+}
 
-  .card-text {
-    width: calc(100% - 60px);
-  }
-  .card-icon i {
-    width: 100%;
-    text-align: center;
-    color: rgba(0, 0, 0, 0.25);
-  }
-  
-  .card a{
-  	font-size: 1.2rem
-  }
+.card-text {
+	width: calc(100% - 60px);
+}
 
+.card-icon i {
+	width: 100%;
+	text-align: center;
+	color: rgba(0, 0, 0, 0.25);
+}
+
+.card a {
+	font-size: 1.2rem
+}
 </style>
 
 
@@ -104,28 +103,18 @@ h6 {
 		<li><a href="/motoristas">Motoristas</a></li>
 	</ul>
 	<main>
+
+		<!-- seção dos cards -->
 		<div class="container-fluid">
 			<div class="row center">
+
+
+				<!-- Card dos motoristas -->
 				<div class="col s12 m4">
 					<div class="card blue darken-1 white-text">
-						<div class="card-content valign-wrapper" >
+						<div class="card-content valign-wrapper">
 							<div class="card-text">
-									<h4 th:text="${#lists.size(veiculos)}"> </h4>
-							</div>
-							<div class="card-action">
-								<a class="white-text" href="/veiculos">Veiculos</a>
-							</div>
-							<div class="card-icon">
-								<i class="material-icons medium valign">directions_car</i>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col s12 m4">
-					<div class="card blue darken-1 white-text">
-						<div class="card-content valign-wrapper" >
-							<div class="card-text">
-								<h4 th:text="${#lists.size(motoristas)}"> </h4>
+								<h4 th:text="${#lists.size(motoristas)}"></h4>
 							</div>
 							<div class="card-action">
 								<a class="white-text" href="/motoristas">motoristas</a>
@@ -136,11 +125,13 @@ h6 {
 						</div>
 					</div>
 				</div>
+
+				<!-- cards de serviços -->
 				<div class="col s12 m4">
 					<div class="card blue darken-1 white-text">
-						<div class="card-content valign-wrapper" >
+						<div class="card-content valign-wrapper">
 							<div class="card-text">
-								<h4 th:text="${#lists.size(servicos)}"> </h4>
+								<h4 th:text="${#lists.size(servicos)}"></h4>
 							</div>
 							<div class="card-action">
 								<a class="white-text" href="/servico">Serviços</a>
@@ -151,8 +142,27 @@ h6 {
 						</div>
 					</div>
 				</div>
+
+				<!-- card dos veiculos -->
+				<div class="col s12 m4">
+					<div class="card blue darken-1 white-text">
+						<div class="card-content valign-wrapper">
+							<div class="card-text">
+								<h4 th:text="${#lists.size(veiculos)}"></h4>
+							</div>
+							<div class="card-action">
+								<a class="white-text" href="/veiculos">Veiculos</a>
+							</div>
+							<div class="card-icon">
+								<i class="material-icons medium valign">directions_car</i>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
+
 	</main>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
