--- a/src/main/resources/templates/usuarios/motorista.html
+++ b/src/main/resources/templates/usuarios/motorista.html
@@ -27,7 +27,7 @@
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a class="btn waves-effect waves-light"
-					href="/gerente/cadastroMotorista">Cadastrar Motorista</a></li>
+					href="/cadastroMotorista">Cadastrar Motorista</a></li>
 			</ul>
 		</div>
 	</nav>
